# OSHUN

./: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md
1d2d_cpp/: CMakeLists.txt  install.sh  manual.html  runoshun.sh
1d2d_cpp/doc/: Doxyfile
1d2d_cpp/doc/source/: inp.dox  main.dox
1d2d_cpp/doc/sphinx/: Makefile  conf.py  index.rst
1d2d_cpp/input/: inputdeck  inputdeck-2d  inputdeck-EPW  inputdeck-hf
1d2d_cpp/source/: clock.cpp  clock.h  collisions.cpp  collisions.h  export.cpp  export.h  fluid.cpp  fluid.h  formulary.cpp  functors.cpp  functors.h  implicitE.cpp  implicitE.h  input.cpp  input.h  lib-algorithms.h  lib-array.h  main.cpp  nmethods.cpp  nmethods.h  parallel.cpp  parallel.h  parser.cpp  parser.h  particletracker.cpp  particletracker.h  setup.cpp  setup.h  state.cpp  state.h  vlasov.cpp  vlasov.h
1d2d_cpp/source/makefiles/: makefile  makefile-hoffman  makefile-jupyterpic
1d_cpp/: CMakeLists.txt  install.sh  runoshun.sh
1d_cpp/doc/: Doxyfile
1d_cpp/doc/manual/html/: annotated.html  annotated_dup.js  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  ex1-Braginskii_transport.html  examples.html  examples.js  files.html  formula.repository  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_0x7e.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  (+266 more)
1d_cpp/doc/manual/html/d0/d07/: class_hydro___advection__1_d__coll__graph.map  class_hydro___advection__1_d__coll__graph.md5
1d_cpp/doc/manual/html/d0/d12/: fluid_8h.html  fluid_8h_source.html
1d_cpp/doc/manual/html/d0/d26/: class_vlasov_functor1_d__f1__explicit_e_b.html  class_vlasov_functor1_d__f1__explicit_e_b.js  class_vlasov_functor1_d__f1__explicit_e_b_a3253cb3d8c2e79a1ec5d71ff80621254_cgraph.map  class_vlasov_functor1_d__f1__explicit_e_b_a3253cb3d8c2e79a1ec5d71ff80621254_cgraph.md5  class_vlasov_functor1_d__f1__explicit_e_b_a522e3aec3cff301b249f6cb87d5a8fd1_cgraph.map  class_vlasov_functor1_d__f1__explicit_e_b_a522e3aec3cff301b249f6cb87d5a8fd1_cgraph.md5  class_vlasov_functor1_d__f1__explicit_e_b_a8c15a5a0a333b5d50edb737e30d221a9_cgraph.map  (+1 more)
1d_cpp/doc/manual/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+135 more)
1d_cpp/doc/source/: examples.dox  groups.dox  inp.dox  main.dox  setup.dox
1d_cpp/doc/sphinx/: conf.py  index.rst  make.bat
1d_cpp/input/: epw  heatflow  heatflow-tanh  heattanh  hf  inputdeck  twosp  twostream
1d_cpp/inputdecks-for-example-1/: heatflow-Z1-fullcollision-unmagnetized  heatflow-Z79-fullcollision-wt144  heatflow-Z79-tridiag_collisions-unmagnetized
1d_cpp/source/: collisions.cpp  collisions.h  export.cpp  export.h  fluid.cpp  fluid.h  formulary.cpp  formulary.h  functors.cpp  functors.h  implicitE.cpp  implicitE.h  input.cpp  input.h  interspeciescollisions.cpp  interspeciescollisions.h  laser.cpp  laser.h  lib-algorithms.h  lib-array.h  main.cpp  makefile  nmethods.cpp  nmethods.h  parallel.cpp  parallel.h  particletracker.cpp  setup.cpp  setup.h  state.cpp  state.h  vlasov.cpp  vlasov.h  vlasov_f1.cpp  vlasov_f1.h
1d_cpp/tests/Z10-1e21/: inputdeck
1d_cpp/tests/Z30-1e21/: inputdeck
1d_cpp/tests/Z60-1e21/: inputdeck
1d_cpp/tests/ep-pw-vth01/: inputdeck
1d_cpp/tests/epw/: inputdeck
1d_cpp/tests/pw-2sp-vth01/: inputdeck
1d_cpp/tests/pw-m100/: inputdeck
1d_python/: CMakeLists.txt
1d_python/examples/: sample-landau-damping.py  sample-spitzer.py
1d_python/postprocess/: landu_damping_simple.py  oshun1d_ld__and_collisions.py  oshun1d_ld_e_vs_time__standing_wave.py  oshun_1d__spatial_echo_process.py
1d_python/source/c/: numpy1.cpp  numpy1.h
1d_python/source/c/legacy/: numpy1_bak.cpp  oshun_c__.py
1d_python/source/c/source_cuda_old/: cuda_compile_config.h  def-FokkerPlanck.cpp  oshun_cuda.cuh  oshun_cuda_kernals.cu
1d_python/source/python/legacy/: oshun1d.py  oshun1d_ld - Copy.py  oshun1d_ld.py_backup
1d_python/source/python/oshun_modules/: FokkerPlankCollisionOperator.py  InputDeckConfiguration.py  Oshun1d.py  Oshun1dEvents.py  OshunBootstrap.py  OshunCInterface.py  OshunEventQueue.py  OshunGlobalState.py  OshunImplictESolver.py  OshunInputDeckHelper.py  OshunMpi.py  __init__.py  __main__.py  es_poisson_solver.py  fragments.py  oshun_hdf_lame.py  profile_main_loop.py  wave-driver.py
1d_python/source/python/oshun_modules/diagnostics/: DistributionFunction.py  moments.py
1d_python/source/python/oshun_modules/formulas/: formulary.py  plasma_dispersion.py
1d_python/source/python/oshun_modules/profiles/: ArbitraryDensity.py  ArbitraryTemperature.py  ProfileCommonUtilities.py  SpatialProfileShapes.py
1d_python/source/python/oshun_modules/setup/: SetupTemplates.py  setup-templates.py
1d_python/source/python/oshun_modules/shared_libraries/: __init__.py
1d_python/source/python/oshun_modules/utils/: ResourceUsage.py  debugging.py  logging.py  timing.py
1d_python/utils/: oshun1d_utils_plasma_dispersion.py
1d_python/utils/runtime/: __do_all.py  __process_all.py  kme.py  oshun1d_launch.py  run_spiter.py
(+1981 files in other folders)
